perf: disable Knex instrumentation if spanStackTraceMinDuration=-1 (#2879)
Knex instrumentation exists only for better span stack traces. It should
be disabled when not collecting span stack traces. This should be a
perf win for default usage of Knex because we avoid an expensive
`Error.captureStackTrace(obj)` for each wrapped knex query.

Obsoletes: #506

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -66,6 +66,10 @@ paths are considered for body capture. ({pull}2873[#2873])
 [float]
 ===== Chores
 
+- Disable knex instrumentation when not collecting span stack traces
+  (because there is no point). This is a performance improvement for
+  Knex usage in the default configuration. ({pull}2879[#2879])
+
 
 [[release-notes-3.38.0]]
 ==== 3.38.0 2022/08/11
