--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,6 +40,9 @@ Notes:
 [float]
 ===== Features
 
+- Support instrumentation of `@koa/router` (and `koa-router`) versions 11 and 12.
+  Contributed by @sibelius. ({issues}2811[#2811])
+
 - Improve the captured information for Elasticsearch client instrumentation.
   For all outgoing Elasticsearch client requests, the full HTTP url is
   now captured (stored in the "url.original" field). For Elasticsearch requests
