--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,6 +40,9 @@ Notes:
 [float]
 ===== Features
 
+- Support instrumentation of `@koa/router` (and `koa-router`) versions 11 and 12.
+  Contributed by @sibelius. ({issues}2811[#2811])
+
 - Support instrumentation of tedious@15. ({pull}2897[#2897])
 
 - Improve the captured information for Elasticsearch client instrumentation.
