--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,12 +40,42 @@ Notes:
 [float]
 ===== Features
 
-- Support instrumentation of `@koa/router` (and `koa-router`) versions 11 and 12.
+* Improve the granularity of data captured about downstream services, e.g.
+  databases, for spans that represent an external call (known as "exit spans").
+  This data is used for
+  https://www.elastic.co/guide/en/kibana/current/service-maps.html[Service Maps]
+  and
+  https://www.elastic.co/guide/en/kibana/current/dependencies.html[Dependencies]
+  in the Kibana APM app.
++
+This is handled via the new span `service.target.*` fields that replace the
+deprecated `destination.service.resource` field (https://github.com/elastic/apm/blob/main/specs/agents/tracing-spans-service-target.md[spec]). All instrumentations have
+been updated to set appropriate service target values. If necessary, e.g. for manual
+instrumentation, a new public <<span-setservicetarget>> API has been added to specify these values.
+({pull}2882[#2882])
++
+The never-public-but-available `span.setDestinationContext()` has been marked
+for removal (using it will `process.emitWarning()`). Users of this internal
+method should switch to the public <<span-setservicetarget>>.
++
+As part of this change, improvements have been made to some module instrumentations:
++
+  ** `redis` and `ioredis`: `span.type` has changed from "cache" to "db" per https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-db.md#redis[spec]
+  ** `mongodb`: `span.action` used to be "query", now it will be the mongodb command name, e.g. "find", "insert".
+  ** `mongodb` and `mongodb-core`: `span.db.instance` is now set to the database name ({issues}1494[#1494])
+  ** `mysql` and `mysql2`: `span.db.{instance,user}` are now populated.
+  ** `@elastic/elasticsearch`: The cluster name is heuristically determined for Elastic Cloud deployments and used for the service target name.
+  ** `sqs`: `span.destination.{address,port}` are now populated.
+  ** `pg`: `span.db.{instance,user}` are now populated.
+  ** `cassandra-driver`: the Cassandra keyspace is captured for service target data, if available.
+  ** OpenTelemetry Bridge: OTel spans with kind PRODUCER and CLIENT are now handled as exit spans (e.g. span compression could apply).
+
+* Support instrumentation of `@koa/router` (and `koa-router`) versions 11 and 12.
   Contributed by @sibelius. ({issues}2811[#2811])
 
-- Support instrumentation of tedious@15. ({pull}2897[#2897])
+* Support instrumentation of tedious@15. ({pull}2897[#2897])
 
-- Improve the captured information for Elasticsearch client instrumentation.
+* Improve the captured information for Elasticsearch client instrumentation.
   For all outgoing Elasticsearch client requests, the full HTTP url is
   now captured (stored in the "url.original" field). For Elasticsearch requests
   that do a search the outgoing request body is captured (to the
@@ -58,7 +88,7 @@ This change also introduces the <<elasticsearch-capture-body-urls>>
 configuration option to enable controlling which Elasticsearch REST API
 paths are considered for body capture. ({pull}2873[#2873])
 
-- Support instrumenting core modules when require'd with the optional
+* Support instrumenting core modules when require'd with the optional
   https://nodejs.org/api/modules.html#core-modules['node:'-prefix].
   For example `require('node:http')` will now be instrumented.
   ({issues}2816[#2816])
