add a changelog entry

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -93,18 +93,22 @@ paths are considered for body capture. ({pull}2873[#2873])
   For example `require('node:http')` will now be instrumented.
   ({issues}2816[#2816])
 
-- Agent will delay loading of the `error-callsites` module until agent start time,
+* Agent will delay loading of the `error-callsites` module until agent start time,
   and will not load the module if the agent is disabled/inactive. This prevents the
   setting of an `Error.prepareStackTrace` handler until necessary for stacktrace
   collection. ({issues}2833[#2833] {pull}2906[#2906])
-  
+
 [float]
 ===== Bug fixes
+
+* Fix instrumentation of (very old) 'graphql' module versions <=0.9.6.
+  Instrumentation of these older graphql versions was broken in v3.36.0.
+  ({pull}2927[#2927])
 
 [float]
 ===== Chores
 
-- Disable knex instrumentation when not collecting span stack traces
+* Disable knex instrumentation when not collecting span stack traces
   (because there is no point). This is a performance improvement for
   Knex usage in the default configuration. ({pull}2879[#2879])
 
