--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -149,6 +149,8 @@ so those should be supported as well.
 |https://www.npmjs.com/package/ws[ws] |>=1.0.0 <8.0.0 |Will instrument outgoing WebSocket messages
 |=======================================================================
 
+NOTE: Traces are collected only when made within a sampled transaction. When not using a support framework, the user needs to take care of creating a transaction. Please check https://www.elastic.co/guide/en/apm/agent/nodejs/current/custom-transactions.html
+
 [float]
 [[compatibility-better-stack-traces]]
 ==== Better Stack Traces
