fix avoids a possible 'RangeError: Maximum call stack size exceeded' in maybeTime(...) (#2939)
This avoids a possible 'RangeError: Maximum call stack size exceeded' as
described in #2929.

The case the user hit is in `maybeTime(...)` used in Span timer handling
by dropping the recursion.  A `Timer` instance's `_timer` is always(*) the
same object as its parent's `_timer` if it has a parent, so there is no
need to walk the chain.

(*): Assuming the internal `timer` option to Span/Transaction creation
  isn't manually used. This change adds a deprecation warning if that
  is the case.

Refs: #2929

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -105,6 +105,9 @@ paths are considered for body capture. ({pull}2873[#2873])
 [float]
 ===== Bug fixes
 
+* Avoid a possible `RangeError: Maximum call stack size exceeded` in
+  Span timer handler for exceedingly deep Span trees. ({pull}2939[#2939])
+
 * Fix instrumentation of (very old) 'graphql' module versions <=0.9.6.
   Instrumentation of these older graphql versions was broken in v3.36.0.
   ({pull}2927[#2927])
