--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -32,10 +32,8 @@ Notes:
 === Node.js Agent version 3.x
 
 
-==== Unreleased
-
-[float]
-===== Breaking changes
+[[release-notes-3.39.0]]
+==== 3.39.0 2022/10/17
 
 [float]
 ===== Features
@@ -78,15 +76,15 @@ As part of this change, improvements have been made to some module instrumentati
 * Improve the captured information for Elasticsearch client instrumentation.
   For all outgoing Elasticsearch client requests, the full HTTP url is
   now captured (stored in the "url.original" field). For Elasticsearch requests
-  that do a search the outgoing request body is captured (to the
-  "span.db.statement" field), as before, but the format has changed to only
+  that do a search, the outgoing request body is captured (to the
+  "span.db.statement" field) as before, but the format has changed to only
   hold the request body. Before this change the "span.db.statement" would
   also hold any HTTP query parameters. These are now more naturally captured
-  with "url.origin". ({issues}2019[#2019])
+  in "url.original". ({issues}2019[#2019])
 +
 This change also introduces the <<elasticsearch-capture-body-urls>>
 configuration option to enable controlling which Elasticsearch REST API
-paths are considered for body capture. ({pull}2873[#2873])
+paths are considered for request body capture. ({pull}2873[#2873])
 
 * Support instrumenting core modules when require'd with the optional
   https://nodejs.org/api/modules.html#core-modules['node:'-prefix].
