--- a/docs/nextjs.asciidoc
+++ b/docs/nextjs.asciidoc
@@ -11,33 +11,33 @@ endif::[]
 
 The Elastic APM Node.js agent can be used to trace the Next.js server (`next
 start` or `next dev`) that runs your application without the need for code
-changes to your app. APM transactions for incoming HTTP requests to the server
-will be named for the https://nextjs.org/docs/routing/introduction[pages] and
-https://nextjs.org/docs/api-routes/introduction[API endpoints] in your
-application, as well as for internal routes used by Next.js. Errors in
-application code run on the server will be reported for viewing in the Kibana
-APM app.
+changes to your app. The APM transactions for incoming HTTP requests to the
+server will be named for the https://nextjs.org/docs/routing/introduction[pages]
+and https://nextjs.org/docs/api-routes/introduction[API endpoints] in your
+application, as well as for internal routes used by Next.js. Errors in code run
+on the server will be reported for viewing in the Kibana APM app.
 
-[float]
-[[nextjs-status]]
-==== Current status
+Note that the Node.js APM agent can only instrument _server-side_ code. To
+monitor the client-side parts of a Next.js application, see the
+https://www.elastic.co/guide/en/apm/agent/rum-js/current/intro.html[Elastic RUM agent].
 
-The Next.js instrumentation is *experimental* while we solicit feedback from
-Next.js users. How the instrumentation works might change significantly in
-future versions of the agent.
-
-If you are a Next.js user, please help us provide a better Next.js observability
-experience with your feedback on our
-https://discuss.elastic.co/tags/c/apm/nodejs[Discuss forum].
+NOTE: This Next.js instrumentation is a _technical preview_ while we solicit feedback
+from Next.js users. That means that how the instrumentation works might change
+in future versions of the agent.  If you are a Next.js user, please help us provide a better Next.js observability experience with your feedback on our https://discuss.elastic.co/tags/c/apm/nodejs[Discuss forum].
 
 
 [float]
 [[nextjs-prerequisites]]
 ==== Prerequisites
 
-You need an APM Server to send APM data to. Follow the {apm-guide-ref}/apm-quick-start.html[APM Quick start] if you have not set one up yet. You will need your *APM server url* and an APM server *secret token* (or *API key*) for configuring the APM agent below.
+You need an APM Server to send APM data to. Follow the
+{apm-guide-ref}/apm-quick-start.html[APM Quick start] if you have not set one up
+yet. You will need your *APM server url* and an APM server *secret token* (or
+*API key*) for configuring the APM agent below.
 
-You will also need a Next.js application to monitor. If you do not have an existing one to use, you can use the following to create a starter app (see https://nextjs.org/docs/getting-started[Next.js Getting Started docs] for more):
+You will also need a Next.js application to monitor. If you do not have an
+existing one to use, you can use the following to create a starter app (see
+https://nextjs.org/docs/getting-started[Next.js Getting Started docs] for more):
 
 [source,bash]
 ----
@@ -45,10 +45,9 @@ npx create-next-app@latest  # use the defaults
 cd my-app
 ----
 
-// XXX update link
+You can also take a look at and use this https://github.com/elastic/apm-agent-nodejs/tree/main/examples/nextjs/[Next.js + Elastic APM example app].
 
-You can also take a look at and use this https://github.com/elastic/apm-agent-nodejs/tree/trentm/feat-nextjs/examples/nextjs/[Next.js + Elastic APM example].
-
+NOTE: XXX Until this is merged, the example is at: <https://github.com/elastic/apm-agent-nodejs/tree/trentm/feat-nextjs/examples/nextjs/>
 
 [float]
 [[nextjs-setup]]
@@ -67,138 +66,132 @@ NOTE: XXX Until this is in a release use `npm install "elastic-apm-node@elastic/
 [float]
 ==== Step 2: Start the APM agent
 
-For the APM agent to instrument the Next.js server, it needs to be started before the Next.js server code is loaded. The best way to do so is by using Node's https://nodejs.org/api/cli.html#-r---require-module[`--require`] option. We could use <<start-option-node-require-opt,`--require elastic-apm-node/start`>> to start the APM agent. However, to integrate a little better with Next.js, we will create a separate "apmsetup.js" file which does a little more than just start the agent.
+For the APM agent to instrument the Next.js server, it needs to be started
+before the Next.js server code is loaded. The best way to do so is by using
+Node's https://nodejs.org/api/cli.html#-r---require-module[`--require`] option
+to load the "elastic-apm-node/start-next.js" module -- this will start the agent
+(plus a little more for Next.js integration).
 
-Edit the "dev" and "start" scripts in your "package.json" to tell Node to require the "apmsetup.js" module on startup. Like this:
+Edit the "dev" and "start" scripts in your "package.json" as follows:
 
-[source,diff]
+[source,json]
 ----
-diff --git a/package.json b/package.json
---- a/package.json
-+++ b/package.json
-@@ -3,9 +3,9 @@
-   "version": "0.1.0",
-   "private": true,
-   "scripts": {
--    "dev": "next dev",
-+    "dev": "NODE_OPTIONS=--require=./apmsetup.js next dev",
-     "build": "next build",
--    "start": "next start",
-+    "start": "NODE_OPTIONS=--require=./apmsetup.js next start",
-     "lint": "next lint"
-   },
-   "dependencies": {
-----
-
-Then save the following as "apmsetup.js":
-
-[source,javascript]
-----
-'use strict'
-
-// Use this script with Node's `--require` flag to monitor a Next.js app with
-// Elastic APM.
-
-// Support `ELASTIC_APM_...` envvars in ".env*" files as Next.js supports them.
-// https://nextjs.org/docs/basic-features/environment-variables
-try {
-  const { loadEnvConfig } = require('@next/env')
-  const isDev = process.argv[process.argv.length - 1] === 'dev'
-  loadEnvConfig(__dirname, isDev) // <1>
-} catch (envErr) {
-  console.error('apmsetup: warning: failed to load @next/env to read possible .env files')
-}
-
-if (!process.env.ELASTIC_APM_SERVER_URL) {
-  console.log('apmsetup: ELASTIC_APM_SERVER_URL is not set, disabling APM')
-} else {
-  // APM agent configuration can be passed to `.start()` or specified as
-  // environment variables.
-  // https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html
-  const apm = require('elastic-apm-node').start() // <2>
-
-  // Flush APM data on server process termination.
-  // https://nextjs.org/docs/deployment#manual-graceful-shutdowns
-  process.env.NEXT_MANUAL_SIG_HANDLE = 1 // <3>
-  function flushApmAndExit () {
-    apm.flush(() => {
-      process.exit(0)
-    })
-  }
-  process.on('SIGTERM', flushApmAndExit)
-  process.on('SIGINT', flushApmAndExit)
+{
+  // ...
+  "scripts": {
+    "dev": "NODE_OPTIONS=--require=elastic-apm-node/start-next.js next dev",
+    "build": "next build",
+    "start": "NODE_OPTIONS=--require=elastic-apm-node/start-next.js next start",
+    "lint": "next lint"
+  },
+  // ...
 }
 ----
-<1> Read environment variables from ".env*" files https://nextjs.org/docs/basic-features/environment-variables[in the same way as the Next.js server].
-<2> If an Elastic APM server URL is configured, then start the APM agent.
-<3> Handle flushing any final APM tracing data on https://nextjs.org/docs/deployment#manual-graceful-shutdowns[graceful termination of the server].
 
 
 [float]
 ==== Step 3: Configure the APM agent
 
-The "apmsetup.js" module supports ".env*" files, so a natural way to configure the APM agent is using those. Create a ".env.local" file with the APM server url and secret token from the <<nextjs-prerequisites>> section above:
+The APM agent can be
+https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuring-the-agent.html[configured]
+with environment variables or with an "elastic-apm-node.js" module in the
+current working directory. Note that because the APM agent is being loaded
+before the Next.js server, the
+https://nextjs.org/docs/basic-features/environment-variables[Next.js-supported
+".env" files] *cannot* be used to configure the APM agent. We will use an
+"elastic-apm-node.js" file here.
+
+Create an "elastic-apm-node.js" file in the application root with the APM server
+url and secret token values from the <<nextjs-prerequisites>> section above:
+
+[source,javascript]
+----
+// elastic-apm-node.js
+module.exports = {
+  serverUrl: 'https://...',  // E.g. https://my-deployment-name.apm.us-west2.gcp.elastic-cloud.com
+  secretToken: '...'
+}
+----
+
+The equivalent using environment variables is:
 
 [source,bash]
 ----
-# .env.local
-ELASTIC_APM_SERVER_URL=https://...  # E.g. https://my-deployment-name.apm.us-west2.gcp.elastic-cloud.com
-ELASTIC_APM_SECRET_TOKEN='...'
+export ELASTIC_APM_SERVER_URL='https://...'
+export ELASTIC_APM_SECRET_TOKEN='...'
 ----
 
-See https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html[the APM configuration guide] for supported configuration variables. See https://nextjs.org/docs/basic-features/environment-variables[the Next.js docs] for more on its support for ".env" files.
+See https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html[the
+APM configuration guide] for full details on supported configuration variables.
 
 
 [float]
-==== Step 4: Start your Next.js app and verify monitoring is working
+==== Step 4: Start your Next.js app
 
 [source,bash]
 ----
 npm run dev  # or 'npm run build && npm start' for the production server
 ----
 
-Open <http://localhost:3000> in your browser to load your Next.js app. If you used the `create-next-app` tool above, it creates a [http://localhost:3000/api/hello]/api/hello API endpoint. You can provide some artificial load by running the following in a separate terminal:
+Open <http://localhost:3000> in your browser to load your Next.js app. If you
+used the `create-next-app` tool above, it defines an
+http://localhost:3000/api/hello[/api/hello] API endpoint. You can provide some
+artificial load by running the following in a separate terminal:
 
 [source,bash]
 ----
 while true; do sleep 1; curl -i http://localhost:3000/api/hello; done
 ----
 
-Visit your Kibana APM app and, after a few seconds, you should see a service entry for your Next.js app. (The service name will be pulled from the "name" field in "package.json". It can be overriden with https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html#service-name[`ELASTIC_APM_SERVICE_NAME`].)
+Visit your Kibana APM app and, after a few seconds, you should see a service
+entry for your Next.js app. (The service name will be pulled from the "name"
+field in "package.json". It can be overriden with
+https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html#service-name[`serviceName`].) Here is an example:
 
 image::./images/nextjs-my-app-screenshot.png[Kibana APM app showing Next.js my-app]
-
-XXX screenshot (can we add screenshots to docs, or too brittle for UI changes?)
 
 
 [float]
 [[nextjs-limitations]]
-==== Next.js instrumentation limitations
+==== Limitations and future work
 
-XXX limitations
+This Next.js instrumentation has some limitations to be aware of.
 
-XXX feedback request
+Next.js build tooling bundles dependencies (using Webpack) for both client _and_
+server-side code execution. The Node.js APM agent does not work when bundled.
+See <<start-bundlers>> for details. The implication for Next.js instrumentation
+is that you cannot directly import and use the APM agent in your code. That
+means that using the <<agent-api>> for manual instrumentation is not currently
+possible.
+
+This instrumentation supports naming APM transactions for many internal Next.js
+routes.  For example, for
+https://nextjs.org/docs/basic-features/data-fetching/get-server-side-props[server-side
+rendering (SSR)] Next.js client code will make requests of the form `GET
+/next/_data/$buildId/$page.json`, for which the APM agent names the transaction
+`Next.js _next/data route $page`. However, there is a limitation with the
+Next.js "public folder catchall" route. HTTP requests that resolve to files in
+your "public/" directory, for example `GET /favicon.ico`, will result in a
+transaction named `GET unknown route`. See <<nextjs-unknown-routes>> below.
+
+If you notice other limitations or have any suggestions, please give us feedback
+on our https://discuss.elastic.co/tags/c/apm/nodejs[Discuss forum].
+
 
 [float]
 [[nextjs-performance-monitoring]]
 ==== Performance monitoring
 
-include::./shared-set-up.asciidoc[tag=performance-monitoring]
+Elastic APM automatically measures the performance of your Next.js application.
+It records spans for database queries, external HTTP requests, and other slow
+operations that happen during requests to your Next.js app. Spans are grouped in
+transactions -- by default one for each incoming HTTP request.
 
 [float]
 [[nextjs-unknown-routes]]
-===== Unknown routes
+==== Unknown routes
 
 include::./shared-set-up.asciidoc[tag=unknown-roots]
-
-XXX Note the limitation on the Next.js catchall route.
-
-
-[float]
-[[nextjs-error-logging]]
-==== Error logging
-
-include::./shared-set-up.asciidoc[tag=error-logging]
 
 [float]
 [[nextjs-filter-sensitive-information]]
