feat: Add support for knex v1

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,6 +31,9 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+* Add support for 'knex' version v1 ({issues}2699[#2699])
+
+
 [[release-notes-3.40.1]]
 ==== 3.40.1 2022/11/15
 
