feat: support instrumentation of restify@10
Restify v10 was recently released to support node >=18. No changes were
required for our instrumentation, other than allowing v10 to be
instrumentated.

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -44,6 +44,8 @@ Notes:
   captured errors) for Lambda functions triggered by API Gateway.
   ({issues}2419[#2419])
 
+* Support instrumentation for restify@10.
+
 [float]
 ===== Bug fixes
 
