--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -32,13 +32,8 @@ Notes:
 === Node.js Agent version 3.x
 
 
-==== Unreleased
-
-[float]
-===== Breaking changes
-
-[float]
-===== Features
+[[release-notes-3.44.1]]
+==== 3.44.1 2023/04/06
 
 [float]
 ===== Bug fixes
@@ -46,9 +41,6 @@ Notes:
 * Fix an issue where the APM agent receiving central config (from APM server)
   containing a value for `sanitized_field_names` would crash.
   ({issues}3247[#3247])
-
-[float]
-===== Chores
 
 
 [[release-notes-3.44.0]]
